# dna

./: .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md
.cursor/commands/: clean-up-vs-head.md
.cursor/plans/: vexa_transcription_integration_f8eb21a7.plan.md
.cursor/rules/: always-update-tests.mdc  always-use-providers.mdc  apply-comments-only-when-needed.mdc  dco-signoff.mdc  escape-markdown-blocks.mdc  keep-app-and-core-seperate.mdc  run-formatting.mdc  running-the-stack.mdc  stlyed-components.mdc  testing-changes.mdc  transcription-pipeline.mdc  use-radix-themes-and-primitives.mdc
.github/: pull_request_template.md
backend/: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.local.vexa.yml  docker-compose.vexa.yml  docker-compose.yml  example.docker-compose.local.vexa.yml  example.docker-compose.local.yml  makefile  pyproject.toml  pytest.ini  requirements.txt  sg_example.docker-compose.local.yml
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
sample_dailies_dataset/: transcript.json
src/manager/: .env.example  Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  pytest.ini
src/manager/src/core/: settings.py  urls.py
src/manager/src/dailies_artifacts/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
src/manager/src/dailies_artifacts/migrations/: 0001_initial.py
src/manager/src/scheduler/: models.py  serializers.py  tests.py  views.py
src/manager/src/scheduler/migrations/: 0001_initial.py
(+197 files in other folders)
